; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_lsproto.c_lquerytype.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_lsproto.c_lquerytype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sproto = type { i32 }
%struct.sproto_type = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"Need a sproto object\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lquerytype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lquerytype(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sproto*, align 8
  %6 = alloca %struct.sproto_type*, align 8
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call %struct.sproto* @lua_touserdata(i32* %7, i32 1)
  store %struct.sproto* %8, %struct.sproto** %5, align 8
  %9 = load %struct.sproto*, %struct.sproto** %5, align 8
  %10 = icmp eq %struct.sproto* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @luaL_argerror(i32* %12, i32 1, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  store i32 %13, i32* %2, align 4
  br label %27

14:                                               ; preds = %1
  %15 = load i32*, i32** %3, align 8
  %16 = call i8* @luaL_checkstring(i32* %15, i32 2)
  store i8* %16, i8** %4, align 8
  %17 = load %struct.sproto*, %struct.sproto** %5, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call %struct.sproto_type* @sproto_type(%struct.sproto* %17, i8* %18)
  store %struct.sproto_type* %19, %struct.sproto_type** %6, align 8
  %20 = load %struct.sproto_type*, %struct.sproto_type** %6, align 8
  %21 = icmp ne %struct.sproto_type* %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %14
  %23 = load i32*, i32** %3, align 8
  %24 = load %struct.sproto_type*, %struct.sproto_type** %6, align 8
  %25 = call i32 @lua_pushlightuserdata(i32* %23, %struct.sproto_type* %24)
  store i32 1, i32* %2, align 4
  br label %27

26:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %22, %11
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local %struct.sproto* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @luaL_argerror(i32*, i32, i8*) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local %struct.sproto_type* @sproto_type(%struct.sproto*, i8*) #1

declare dso_local i32 @lua_pushlightuserdata(i32*, %struct.sproto_type*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
